fix the python path in appsettings. Add extract tracks ui element. Add scripts that changes visibility of the element

--- a/src/ClipYT/wwwroot/css/site.css
+++ b/src/ClipYT/wwwroot/css/site.css
@@ -213,6 +213,7 @@ input[type=text] {
     position: relative;
     border-radius: 20px;
     transition: 0.25s cubic-bezier(0, 0, 0, 1);
+    width: 100%;
 }
 
     .radio-option:last-child {
